syntax="proto3";// syntax of the proto file (current version is 3)
package ro.tuc.ds2020.grpc; 
option java_multiple_files = true; // use multiple file for each object instead of one big file

message ChatMessage {
    string from = 1;
    string to = 2;
    string msg = 3;
    string time = 4;
    string status = 5;
}

message User {
    string id = 1;
    string name = 2;
}

message Empty {
}

message UserList {
    repeated User users = 1;
}

message JoinResponse {
    int32 error = 1;
    string msg = 2;
}

message ReceiveMsgRequest {
    string user = 1;
}

service ChatService {
    rpc join(User) returns (JoinResponse) {}
    rpc sendMsg(ChatMessage) returns (Empty) {}
    rpc receiveMsg(Empty) returns (stream ChatMessage) {}
    rpc getAllUsers(Empty) returns (UserList) {}
}